...
            />
            <Drawer.Screen
              name="(screens)/IndoorDirections"
              component={IndoorDirections}
              options={{
                drawerLabel: "Room to Room Directions",
                title: "Indoor Directions",
                drawerIcon: () => (
                  <Image
                    style={styles.navLogo}
                    source={require("../assets/images/direction.png")}
                  />
                ),
...
