...
            name="my-location"
            size={24}
            color="rgba(145, 35, 55, 0.99)"
          />
          <TextInput
            style={styles.input}
            placeholder="Start location (e.g., H-920)"
            value={startLocation}
            onChangeText={setStartLocation}
            placeholderTextColor="#999"
          />
        </View>

...
              name="location-on"
              size={24}
              color="rgba(145, 35, 55, 0.99)"
            />
            <TextInput
              style={styles.input}
              placeholder="Destination (room or amenity)"
              value={destination}
              onChangeText={filterAmenities}
              placeholderTextColor="#999"
            />
          </View>

...
