appId: host.exp.exponent
---
- tapOn: "Show navigation menu"
- tapOn: "Indoor Directions"
- tapOn: "Get Directions"
- tapOn: "Start location (e.g., H-920)"
- inputText: "H-531"
- tapOn: "Destination (room or amenity)"
- inputText: "H-585"
- tapOn: "Get Directions"